# htmf

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  askama.toml  release.toml
.github/workflows/: ci.yml
askama_to_htmf/: Cargo.toml  README.md
askama_to_htmf/src/: main.rs
askama_to_htmf/src/tests/: login.html  login_page.rs  mod.rs
askama_to_htmf/src/tests/snapshots/: askama_to_htmf__tests__login_page__login_page.snap  askama_to_htmf__tests__login_page__login_page.snap.new  askama_to_htmf__tests__login_page__login_page_inline.snap
benches/: basic.rs
examples/login_page/: main.rs
examples/login_page_askama/: main.rs
htmf/: CHANGELOG.md  Cargo.toml
htmf/benches/: basic.rs
htmf/src/: builder.rs  element.rs  into_attrs.rs  into_elements.rs  lib.rs  prelude.rs  prelude_inline.rs
htmf/src/declare/: all_attrs.rs  all_tags.rs  mod.rs
htmf/src/declare_inline/: all_tags.rs  mod.rs
htmf/src/snapshots/: htmf__builder__tests__base.snap  htmf__tests__base-2.snap  htmf__tests__base-2.snap.new  htmf__tests__base.snap  htmf__tests__declare_list.snap
src/: attr.rs  builder.rs  element.rs  escape.rs  into_attrs.rs  into_elements.rs  lib.rs
src/declare/: all_attrs.rs  all_tags.rs  attrs.rs  builder.rs  mod.rs  tags.rs
src/snapshots/: htmb__tests__base.snap  htmf__tests__base.snap  htmf__tests__base.snap.new
