[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Rafael Epplée <hello@rafa.ee>"]
repository = "https://github.com/raffomania/htmf"
homepage = "https://github.com/raffomania/htmf"

[workspace]
members = [ "askama_to_htmf","htmf"]
resolver = "2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
