[package]
name = "htmf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "hypertext markup functions: functions for generating HTML"
keywords = ["html"]

[features]
default = []
unstable-builder = []

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
insta = { version = "1.39.0", features = ["yaml"] }
# For examples
garde = { version = "0.20.0", default-features = false, features = ["derive"] }
askama = { version = "0.12.1" }
pretty_assertions = "1.4.0"

[[bench]]
name = "basic"
harness = false
